build_out.txt
[92m============================================[0m
[92m   3sx - Incremental Recompile              [0m
[92m============================================[0m

[92m[V] Using MSYS2 at: "C:\msys64"[0m

[93m[*] Incremental build in: D:\3sxtra\[0m

[92m[*] Starting MSYS2 MinGW64 incremental build...[0m

[1/66] Building C object CMakeFiles/3sx.dir/src/netplay/netplay.c.obj
FAILED: [code=1] CMakeFiles/3sx.dir/src/netplay/netplay.c.obj 
C:\msys64\mingw64\bin\clang.exe -DDEBUG -DGEKKONET_STATIC -DHAVE_UPNP -DNETPLAY_ENABLED -DRMLUI_SDL_VERSION_MAJOR=3 -DRMLUI_STATIC_LIB -DTARGET_SDL3 -DTRACY_ENABLE -D_POSIX_C_SOURCE=200809L -ID:/3sxtra/src -ID:/3sxtra/src/include -ID:/3sxtra/src/include/sdk -ID:/3sxtra/src/zlib -ID:/3sxtra/third_party/GekkoNet/GekkoLib/include -ID:/3sxtra/third_party/stb -ID:/3sxtra/third_party/librashader/include -ID:/3sxtra/third_party/simde -I/include -ID:/3sxtra/build/gladsources/glad/include -ID:/3sxtra/third_party/sdl3/SDL/src/video/khronos -ID:/3sxtra/src/port/sdl/app -ID:/3sxtra/src/port/sdl/renderer -ID:/3sxtra/src/port/sdl/input -ID:/3sxtra/src/port/sdl/imgui -ID:/3sxtra/src/port/sdl/netplay -ID:/3sxtra/src/port/sdl/rmlui -ID:/3sxtra/src/port/config -ID:/3sxtra/src/port/save -ID:/3sxtra/src/port/mods -ID:/3sxtra/src/port/rendering -ID:/3sxtra/src/include/port/sdl/app -ID:/3sxtra/src/include/port/sdl/renderer -ID:/3sxtra/src/include/port/sdl/input -ID:/3sxtra/src/include/port/config -ID:/3sxtra/src/include/port/save -ID:/3sxtra/src/include/port/rendering -ID:/3sxtra/third_party/Spout2/SPOUTSDK/SpoutGL -ID:/3sxtra/third_party/imgui -ID:/3sxtra/third_party/imgui/backends -ID:/3sxtra/third_party/rmlui/Backends -ID:/3sxtra/third_party/sdl3/build/include -ID:/3sxtra/third_party/sdl3_image/build/include -ID:/3sxtra/third_party/sdl3_mixer/build/include -ID:/3sxtra/build/gladsources/glad_gl_core/include -ID:/3sxtra/third_party/SDL_shadercross/include -ID:/3sxtra/third_party/rmlui/Include -isystem D:/3sxtra/third_party/lua/src -isystem D:/3sxtra/build/_deps/tracy-src/public -O2 -g -DNDEBUG -std=gnu11 -Wall -Werror -fno-strict-aliasing -Wpointer-to-int-cast -Wno-deprecated-non-prototype -Wno-tautological-overlap-compare -Wno-c2x-extensions -Wno-incompatible-pointer-types -Wno-pointer-sign -Wno-absolute-value -Wno-implicit-function-declaration -mavx2 -mfma -MD -MT CMakeFiles/3sx.dir/src/netplay/netplay.c.obj -MF CMakeFiles\3sx.dir\src\netplay\netplay.c.obj.d -o CMakeFiles/3sx.dir/src/netplay/netplay.c.obj -c D:/3sxtra/src/netplay/netplay.c
D:/3sxtra/src/netplay/netplay.c:654:2: error: unterminated conditional directive
  654 | #if defined(DEBUG)
      |  ^
1 error generated.
[2/66] Building C object CMakeFiles/3sx.dir/src/netplay/game_state.c.obj
FAILED: [code=1] CMakeFiles/3sx.dir/src/netplay/game_state.c.obj 
C:\msys64\mingw64\bin\clang.exe -DDEBUG -DGEKKONET_STATIC -DHAVE_UPNP -DNETPLAY_ENABLED -DRMLUI_SDL_VERSION_MAJOR=3 -DRMLUI_STATIC_LIB -DTARGET_SDL3 -DTRACY_ENABLE -D_POSIX_C_SOURCE=200809L -ID:/3sxtra/src -ID:/3sxtra/src/include -ID:/3sxtra/src/include/sdk -ID:/3sxtra/src/zlib -ID:/3sxtra/third_party/GekkoNet/GekkoLib/include -ID:/3sxtra/third_party/stb -ID:/3sxtra/third_party/librashader/include -ID:/3sxtra/third_party/simde -I/include -ID:/3sxtra/build/gladsources/glad/include -ID:/3sxtra/third_party/sdl3/SDL/src/video/khronos -ID:/3sxtra/src/port/sdl/app -ID:/3sxtra/src/port/sdl/renderer -ID:/3sxtra/src/port/sdl/input -ID:/3sxtra/src/port/sdl/imgui -ID:/3sxtra/src/port/sdl/netplay -ID:/3sxtra/src/port/sdl/rmlui -ID:/3sxtra/src/port/config -ID:/3sxtra/src/port/save -ID:/3sxtra/src/port/mods -ID:/3sxtra/src/port/rendering -ID:/3sxtra/src/include/port/sdl/app -ID:/3sxtra/src/include/port/sdl/renderer -ID:/3sxtra/src/include/port/sdl/input -ID:/3sxtra/src/include/port/config -ID:/3sxtra/src/include/port/save -ID:/3sxtra/src/include/port/rendering -ID:/3sxtra/third_party/Spout2/SPOUTSDK/SpoutGL -ID:/3sxtra/third_party/imgui -ID:/3sxtra/third_party/imgui/backends -ID:/3sxtra/third_party/rmlui/Backends -ID:/3sxtra/third_party/sdl3/build/include -ID:/3sxtra/third_party/sdl3_image/build/include -ID:/3sxtra/third_party/sdl3_mixer/build/include -ID:/3sxtra/build/gladsources/glad_gl_core/include -ID:/3sxtra/third_party/SDL_shadercross/include -ID:/3sxtra/third_party/rmlui/Include -isystem D:/3sxtra/third_party/lua/src -isystem D:/3sxtra/build/_deps/tracy-src/public -O2 -g -DNDEBUG -std=gnu11 -Wall -Werror -fno-strict-aliasing -Wpointer-to-int-cast -Wno-deprecated-non-prototype -Wno-tautological-overlap-compare -Wno-c2x-extensions -Wno-incompatible-pointer-types -Wno-pointer-sign -Wno-absolute-value -Wno-implicit-function-declaration -mavx2 -mfma -MD -MT CMakeFiles/3sx.dir/src/netplay/game_state.c.obj -MF CMakeFiles\3sx.dir\src\netplay\game_state.c.obj.d -o CMakeFiles/3sx.dir/src/netplay/game_state.c.obj -c D:/3sxtra/src/netplay/game_state.c
D:/3sxtra/src/netplay/game_state.c:1458:13: error: unused function 'dump_saved_state' [-Werror,-Wunused-function]
 1458 | static void dump_saved_state(int frame) {
      |             ^~~~~~~~~~~~~~~~
1 error generated.
[3/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_title_screen.cpp.obj
[4/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_mode_menu.cpp.obj
[5/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_option_menu.cpp.obj
[6/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_memory_card.cpp.obj
[7/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_continue.cpp.obj
[8/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_gameover.cpp.obj
[9/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_game_option.cpp.obj
[10/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_training_menus.cpp.obj
[11/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_vs_result.cpp.obj
[12/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_sound_menu.cpp.obj
[13/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_win_screen.cpp.obj
[14/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_button_config.cpp.obj
[15/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_training_menu.cpp.obj
[16/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_extra_option.cpp.obj
[17/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_sysdir.cpp.obj
[18/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_network_lobby.cpp.obj
[19/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_mods_menu.cpp.obj
[20/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_stage_config.cpp.obj
[21/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_frame_display.cpp.obj
[22/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_shader_menu.cpp.obj
[23/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_netplay_ui.cpp.obj
[24/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_input_display.cpp.obj
[25/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_control_mapping.cpp.obj
[26/66] Building CXX object CMakeFiles/3sx.dir/src/port/sdl/rmlui/rmlui_game_hud.cpp.obj
ninja: build stopped: subcommand failed.

[91m[X] Build failed with exit code: 1[0m
Press any key to continue . . . 
